--- a/cnn+tcn+lstm_updated.ipynb
+++ b/cnn+tcn+lstm_updated.ipynb
@@ -12,14 +12,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 73
         },
         "id": "keeLXXvw-LTS",
-        "outputId": "83b61b94-9706-49f0-d982-f7c6cc6c054f"
+        "outputId": "a3675223-9ac1-461a-bfe7-f82f984c00d0"
       },
       "outputs": [
         {
@@ -30,9 +30,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-06db1334-abad-42e5-a1c3-c5d651783fad\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-e21ea36a-cb76-470c-897b-368fe722f678\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-06db1334-abad-42e5-a1c3-c5d651783fad\">\n",
+              "     <output id=\"result-e21ea36a-cb76-470c-897b-368fe722f678\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -220,7 +220,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Saving phising.csv to phising.csv\n"
+            "Saving phishing.csv to phishing (1).csv\n"
           ]
         }
       ],
@@ -238,7 +238,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "DTqiIQN8-GJM"
       },
@@ -259,12 +259,12 @@
       "source": [
         "import pandas as pd\n",
         "# Replace 'your_dataset.csv' with the\n",
-        "df = pd.read_csv('phising.csv')"
+        "df = pd.read_csv('phishing.csv')"
       ],
       "metadata": {
         "id": "47-gOwoCc0zq"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -283,26 +283,10 @@
         "df['type'] = label_encoder.fit_transform(df['type'])"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "KJSbiS-zc5Ia",
-        "outputId": "533fce1a-72ac-4ba9-b9b2-a9bf5c0dc20f"
+        "id": "KJSbiS-zc5Ia"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.10/dist-packages (1.2.2)\n",
-            "Requirement already satisfied: numpy>=1.17.3 in /usr/local/lib/python3.10/dist-packages (from scikit-learn) (1.25.2)\n",
-            "Requirement already satisfied: scipy>=1.3.2 in /usr/local/lib/python3.10/dist-packages (from scikit-learn) (1.11.4)\n",
-            "Requirement already satisfied: joblib>=1.1.1 in /usr/local/lib/python3.10/dist-packages (from scikit-learn) (1.3.2)\n",
-            "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from scikit-learn) (3.3.0)\n"
-          ]
-        }
-      ]
+      "execution_count": 9,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -312,7 +296,7 @@
       "metadata": {
         "id": "1Op3AdpYdMsw"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -324,7 +308,7 @@
       "metadata": {
         "id": "72n2XJN7dQk4"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -342,7 +326,7 @@
       "metadata": {
         "id": "I9gxxW3OdVnW"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -356,7 +340,7 @@
       "metadata": {
         "id": "TZYt1eFNeZdQ"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -368,7 +352,7 @@
       "metadata": {
         "id": "0UFM4miVeco9"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -380,7 +364,7 @@
       "metadata": {
         "id": "c87z5ytbekDL"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -391,7 +375,7 @@
       "metadata": {
         "id": "UPqYued0enha"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -402,7 +386,7 @@
       "metadata": {
         "id": "zSXAcvUwerCe"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -416,7 +400,7 @@
       "metadata": {
         "id": "6LTSQByjewG_"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -428,7 +412,7 @@
       "metadata": {
         "id": "edDhhxkHe5sI"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -439,7 +423,7 @@
       "metadata": {
         "id": "u-KjtqSPe9_0"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -450,7 +434,7 @@
       "metadata": {
         "id": "cyurtBHGfCCL"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -464,35 +448,35 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G1fiJz1ofIJ-",
-        "outputId": "1ae2d164-ad53-4dda-e79b-acd51121de52"
+        "outputId": "b044e1b3-fa06-4bf1-e656-409d279c07f6"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/5\n",
-            "14652/14652 [==============================] - 748s 51ms/step - loss: 0.1438 - accuracy: 0.9466 - val_loss: 0.1060 - val_accuracy: 0.9609\n",
+            "1514/1514 [==============================] - 86s 55ms/step - loss: 0.1897 - accuracy: 0.9346 - val_loss: 0.1179 - val_accuracy: 0.9569\n",
             "Epoch 2/5\n",
-            "14652/14652 [==============================] - 747s 51ms/step - loss: 0.0958 - accuracy: 0.9638 - val_loss: 0.1028 - val_accuracy: 0.9615\n",
+            "1514/1514 [==============================] - 82s 54ms/step - loss: 0.0858 - accuracy: 0.9685 - val_loss: 0.1173 - val_accuracy: 0.9586\n",
             "Epoch 3/5\n",
-            "14652/14652 [==============================] - 766s 52ms/step - loss: 0.0850 - accuracy: 0.9672 - val_loss: 0.0980 - val_accuracy: 0.9640\n",
+            "1514/1514 [==============================] - 81s 54ms/step - loss: 0.0701 - accuracy: 0.9729 - val_loss: 0.1192 - val_accuracy: 0.9619\n",
             "Epoch 4/5\n",
-            "14652/14652 [==============================] - 766s 52ms/step - loss: 0.0786 - accuracy: 0.9695 - val_loss: 0.0991 - val_accuracy: 0.9642\n",
+            "1514/1514 [==============================] - 82s 54ms/step - loss: 0.0643 - accuracy: 0.9744 - val_loss: 0.1264 - val_accuracy: 0.9612\n",
             "Epoch 5/5\n",
-            "14652/14652 [==============================] - 765s 52ms/step - loss: 0.0741 - accuracy: 0.9712 - val_loss: 0.1039 - val_accuracy: 0.9640\n"
+            "1514/1514 [==============================] - 82s 54ms/step - loss: 0.0616 - accuracy: 0.9759 - val_loss: 0.1223 - val_accuracy: 0.9629\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.src.callbacks.History at 0x7d1fae7a9810>"
+              "<keras.src.callbacks.History at 0x7c996018f310>"
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 22
         }
       ]
     },
@@ -508,16 +492,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "D-4ENXWAuSZJ",
-        "outputId": "d1554917-f108-4d8e-9e37-968f26fc8314"
+        "outputId": "e43612f5-2675-40a2-8e09-2e07f0cf2de0"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "4070/4070 [==============================] - 65s 16ms/step - loss: 0.1028 - accuracy: 0.9639\n",
-            "Test Accuracy: 96.39%\n"
+            "421/421 [==============================] - 7s 16ms/step - loss: 0.0991 - accuracy: 0.9645\n",
+            "Test Accuracy: 96.45%\n"
           ]
         }
       ]
@@ -535,15 +519,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wsNAkm0LvGnX",
-        "outputId": "c1780d6c-2e2a-4752-8cbd-e1d69aa5543a"
+        "outputId": "6378146a-799c-4a56-e9e1-6b96c5387ded"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1/1 [==============================] - 0s 36ms/step\n"
+            "1/1 [==============================] - 1s 510ms/step\n"
           ]
         }
       ]
@@ -560,9 +544,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tG7Zz4h-wDgD",
-        "outputId": "a86192fa-8f8c-4dd1-f1e7-b5a2e4ea60a1"
+        "outputId": "4771ce0d-5508-49ed-fbb0-25a1a33e5722"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -586,9 +570,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6d2KcN4jwp-U",
-        "outputId": "29ee12cf-fa56-4966-f502-f7c5ad00136f"
+        "outputId": "7e15f649-9dd9-4eb9-a6f4-415066a564f6"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -616,9 +600,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "63XyD82X0zI3",
-        "outputId": "5604bedb-e6c1-420f-ab53-19e721046881"
+        "outputId": "0854a80d-4350-400a-d17d-ea6d5e93da44"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -628,12 +612,110 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Step 2: Import pickle module\n",
+        "import pickle\n",
+        "\n",
+        "# Step 3: Save the model using pickle.dump()\n",
+        "with open('model.pkl', 'wb') as f:\n",
+        "    pickle.dump(model, f)"
+      ],
+      "metadata": {
+        "id": "wznGFRINjCv7"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import files\n",
+        "files.download('model.pkl')\n"
+      ],
+      "metadata": {
+        "id": "pospmLN5jJx6",
+        "outputId": "428c8e6d-285d-46d6-b0f0-d09fe59a66c6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_8111aa9a-721e-4177-9617-99ee8f012429\", \"model.pkl\", 6857238)"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNgH1+BZsHcM3OrsIP7iB96",
+      "authorship_tag": "ABX9TyN7sM37CHTaj2XJKJhcTsaR",
       "include_colab_link": true
     },
     "kernelspec": {
